--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,21 +1,9 @@
-name = "sgdoo" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-[[routes]]
-pattern = "sgdoo.gratisanvpn.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "shopee.co.id.sgdoo.gratisanvpn.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cf.shopee.co.id.sgdoo.gratisanvpn.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cv.shopee.sgdoo.gratisanvpn.biz.id
-custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -24,4 +12,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "53f70a8e-2c87-4426-a765-15136a7a610c"
+UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
