--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "devDependencies": {
         "@cloudflare/workers-types": "^4.20230710.1",
         "wrangler": "^3.2.0"
+    },
+    "dependencies": {
+        "js-sha256": "^0.11.0"
     }
 }
