--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indo" # todo
+name = "sga" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.gratisanvpn.biz.id"
+pattern = "sga.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.indo.gratisanvpn.biz.id"
+pattern = "shopee.co.id.sga.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.indo.gratisanvpn.biz.id"
+pattern = "cf.shopee.co.id.sga.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.indo.gratisanvpn.biz.id"
+pattern = "cv.shopee.sg.sga.gratisanvpn.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.indo.gratisanvpn.biz.id"
+pattern = "cvs-deo.shopeemobile.sga.gratisanvpn.biz.id"
 custom_domain = true
 
 [vars]
