--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "noysz" # todo
+name = "linode" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "noysz.noyszvpn.filegear-sg.me"
+pattern = "linode.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.noysz.noyszvpn.filegear-sg.me"
+pattern = "sb.scorecardresearch.com.linode.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.noysz.noyszvpn.filegear-sg.me"
+pattern = "help.viu.com.linode.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.noysz.noyszvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.linode.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.noysz.noyszvpn.filegear-sg.me"
+pattern = "cargo.shopeemobile.com.linode.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
