--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "linode" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "linode.noyszvpn.filegear-sg.me"
+pattern = "sgdo.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "sb.scorecardresearch.com.linode.noyszvpn.filegear-sg.me"
+pattern = "token-media-vidio-com.akamaized.net.com.sgdo.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.linode.noyszvpn.filegear-sg.me"
+pattern = "help.viu.com.sgdo.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.linode.noyszvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cargo.shopeemobile.com.linode.noyszvpn.filegear-sg.me"
+pattern = "cargo.shopeemobile.com.sgdo.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
