--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "sg-vult" # todo
+name = "thailand" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -6,25 +6,22 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 
 [[routes]]
-pattern = "sg-vult.ershavpn.biz.id"
+pattern = "thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.sg-vult.ershavpn.biz.id"
+pattern = "cf.shopee.co.id.sea-sw.swiftserve.com.thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "nontontv.vidio.com.sg-vult.ershavpn.biz.id"
+pattern = "shopee.co.id.thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.sg-vult.ershavpn.biz.id"
+pattern = "cf.shopee.co.id.thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.sg-vult.ershavpn.biz.id"
+pattern = "cv.shopee.sg.thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.sg-vult.ershavpn.biz.id"
-custom_domain = true
-[[routes]]
-pattern = "cvs-deo.shopeemobile.com.sg-vult.ershavpn.biz.id"
+pattern = "cvs-deo.shopeemobile.com.thailand.ershavpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
