--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,21 +6,21 @@ main = "_worker.js"
 compatibility_date = "2023-05-26"
 
 [[routes]]
-pattern = "Doomvpn.filegear-sg.me"
+pattern = "doomvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.ph.Doomvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.domvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.ph.Doomvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.domvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.ph.Doomvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.domvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.ph.Doomvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.domvpn.filegear-sg.me"
 custom_domain = true
-[vars]
+
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
