--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "AOFEI" # todo
+name = "aofei" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "AOFEI.noyszvpn.filegear-sg.me"
+pattern = "aofei.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.AOFEI.noyszvpn.filegear-sg.me"
+pattern = "cdn.appsflyer.com.aofei.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "gomarketplacefront-cf.zoom.us.AOFEI.noyszvpn.filegear-sg.me"
+pattern = "perkosa.bela.my.id.aofei.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "perkosa.bela.my.id.AOFEI.noyszvpn.filegear-sg.me"
+pattern = "gomarketplacefront-cf.zoom.us.aofei.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.AOFEI.noyszvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.aofei.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
