--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indo" # todo
+name = "sgdo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.apanya.filegear-sg.me"
+pattern = "sgdo.apanya.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.indo.apanya.filegear-sg.me"
+pattern = "shopee.co.id.sgdo.apanya.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.indo.apanya.filegear-sg.me"
+pattern = "cf.shopee.co.id.sgdo.apanya.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.indo.apanya.filegear-sg.me"
+pattern = "cv.shopee.sg.sgdo.apanya.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.indo.apanya.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.sgdo.apanya.filegear-sg.me"
 custom_domain = true
 
 [vars]
