--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "aofei" # todo
+name = "GCP" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "aofei.noyszvpn.filegear-sg.me"
+pattern = "GCP.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.aofei.noyszvpn.filegear-sg.me"
+pattern = "quiz.int.vidio.com.GCP.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "perkosa.bela.my.id.aofei.noyszvpn.filegear-sg.me"
+pattern = "perkosa.bela.my.id.GCP.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "gomarketplacefront-cf.zoom.us.aofei.noyszvpn.filegear-sg.me"
+pattern = "gomarketplacefront-cf.zoom.us.GCP.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.aofei.noyszvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.GCP.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
