--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "envyous" # todo
+name = "alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gcp.vpn-cakill.biz.id"
+pattern = "kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.gcp.vpn-cakill.biz.id"
+pattern = "shopee.co.id.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.gcp.vpn-cakill.biz.id"
+pattern = "cf.shopee.co.id.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.gcp.vpn-cakill.biz.id"
+pattern = "cv.shopee.sg.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.gcp.vpn-cakill.biz.id"
+pattern = "cvs-deo.shopeemobile.com.kidzvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
