--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indoalibaba" # todo
+name = "indoali" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "kidzvpn.filegear-sg.me"
+pattern = "zxc.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.kidzvpn.filegear-sg.me"
+pattern = "shopee.co.id.zxc.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.kidzvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.zxc.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.kidzvpn.filegear-sg.me"
+pattern = "cv.shopee.sg.zxc.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.kidzvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.zxc.kidzvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
