--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "sg" # todo
+name = "idrj" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -18,6 +18,27 @@ pattern = "support.duolingo.com.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "blog.webex.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cv.shopee.sg.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
 custom_domain = true
 
 [vars]
