--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,44 +1,44 @@
-name = "sg" # todo
+name = "idrj" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "katum.filegear-sg.me"
+pattern = "id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.katum.filegear-sg.me"
+pattern = "shopee.co.id.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.katum.filegear-sg.me"
+pattern = "cf.shopee.co.id.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.katum.filegear-sg.me"
+pattern = "cv.shopee.sg.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.katum.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.katum.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "www.webex.com.katum.filegear-sg.me"
+pattern = "www.webex.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.katum.filegear-sg.me"
+pattern = "support.duolingo.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.katum.filegear-sg.me"
+pattern = "blog.webex.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.katum.filegear-sg.me"
+pattern = "quiz.int.vidio.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.id.katum.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.katum.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.id.katum.filegear-sg.me"
 custom_domain = true
 
 [vars]
