--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "nyoba" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.dandvpn.filegear-sg.me"
+pattern = "sg.dandvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.indo.dandvpn.filegear-sg.me"
+pattern = "shopee.co.id.sg.dandvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.indo.dandvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.sg.dandvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.indo.dandvpn.filegear-sg.me"
+pattern = "cv.shopee.sg.sg.dandvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.indo.dandvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.sg.dandvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
