--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "sgoraqle" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "oraqle.kidzvpn.filegear-sg.me"
+pattern = "contabo.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
+pattern = "shopee.co.id.contabo.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.contabo.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.oraqle.kidzvpn.filegear-sg.me"
+pattern = "cv.shopee.sg.contabo.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.oraqle.kidzvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.contabo.kidzvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
