--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,29 @@
-name = "contabo" # todo
+name = "oraqle" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "contabo.kidzvpn.filegear-sg.me"
+pattern = "oraqle.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.contabo.kidzvpn.filegear-sg.me"
+pattern = "shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.contabo.kidzvpn.filegear-sg.me"
+pattern = "cf.shopee.co.id.oraqle.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cv.shopee.sg.contabo.kidzvpn.filegear-sg.me"
+pattern = "cv.shopee.sg.oraqle.kidzvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.contabo.kidzvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.oraqle.kidzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "support.duolingo.com.oraqle.kidzvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "error.growmotion.com.oraqle.kidzvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
