--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "gcp" # todo
+name = "alisg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gcp.noyszvpn.filegear-sg.me"
+pattern = "alisg.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.gcp.noyszvpn.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.alisg.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "perkosa.bela.my.id.gcp.noyszvpn.filegear-sg.me"
+pattern = "api.instagram.com.alisg.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api-staging2.test.mitra.shopee.co.id.gcp.noyszvpn.filegear-sg.me"
+pattern = "m.pubgmobile.com.alisg.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.gcp.noyszvpn.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.alisg.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
