--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,7 +16,9 @@ custom_domain = true
 [[routes]]
 pattern = "udemy.com.indo.abscelluler.my.id"
 custom_domain = true
-
+[[routes]]
+pattern = "udemy.com.indo.abscelluler.my.id"
+custom_domain = true
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
 # PROXYIP = "1.2.3.4"
