--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,13 +5,13 @@ name = "linode-trojan" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "linode.tingkehvpn.my.id"
+pattern = "sg.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.linode.tingkehvpn.my.id"
+pattern = "shopee.co.id.sg.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "cf.shopee.co.id.linode.tingkehvpn.my.id"
+pattern = "cf.shopee.co.id.sg.tingkehvpn.my.id"
 custom_domain = true
 [[routes]]
 
