--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,13 +5,13 @@ name = "indo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "abscelluler.my.id"
+pattern = "indo.abscelluler.my.id"
 custom_domain = true
 [[routes]]
-pattern = "gw.ruangguru.com.abscelluler.my.id"
+pattern = "gw.ruangguru.com.indo.abscelluler.my.id"
 custom_domain = true
 [[routes]]
-pattern = "104.18.2.2.abscelluler.my.id"
+pattern = "104.18.2.2.indo.abscelluler.my.id"
 custom_domain = true
 
 [vars]
