--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,29 @@
-name = "alisg" # todo
+name = "oc" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alisg.noyszvpn.filegear-sg.me"
+pattern = "oc.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.alisg.noyszvpn.filegear-sg.me"
+pattern = "cache.netflix.com.oc.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.alisg.noyszvpn.filegear-sg.me"
+pattern = "api.instagram.com.oc.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.pubgmobile.com.alisg.noyszvpn.filegear-sg.me"
+pattern = "m.pubgmobile.com.oc.noyszvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.alisg.noyszvpn.filegear-sg.me"
+pattern = "help.viu.com.oc.noyszvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cdn.appsfyler.com.oc.noyszvpn.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "static-web.prod.vidiocdn.com.oc.noyszvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
