--- a/wrangler.toml
+++ b/wrangler.toml
@@ -25,6 +25,9 @@ custom_domain = true
 [[routes]]
 pattern = "static-web.prod.vidiocdn.com.oc.noyszvpn.filegear-sg.me"
 custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.oc.noyszvpn.filegear-sg.me"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
