--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg" # todo
+name = "sglinode" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 routes
-pattern = "sg.ayubisanz.filegear-sg.me"
+pattern = "linode.ayubisanz.filegear-sg.me"
 custom_domain = true
 routes
-pattern = "shopee.co.id.sg.ayubisanz.filegear-sg.me"
+pattern = "shopee.co.id.linode.ayubisanz.filegear-sg.me"
 custom_domain = true
 routes
-pattern = "cf.shopee.co.id.sg.ayubisanz.filegear-sg.me"
+pattern = "cf.shopee.co.id.linode.ayubisanz.filegear-sg.me"
 custom_domain = true
 routes
-pattern = "cv.shopee.sg.sg.ayubisanz.filegear-sg.me"
+pattern = "cv.shopee.sg.linode.ayubisanz.filegear-sg.me"
 custom_domain = true
 routes
-pattern = "cvs-deo.shopeemobile.com.sg.ayubisanz.filegear-sg.me"
+pattern = "cvs-deo.shopeemobile.com.linode.ayubisanz.filegear-sg.me"
 custom_domain = true
 
 [vars]
